--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Guanghao Li</a>,</span>
+                <a href="https://lightingooo.github.io/" target="_blank">Guanghao Li</a>,</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Yu Cao</a>,</span>
                   <span class="author-block">
@@ -138,7 +138,7 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
+        <source src="static/videos/RAL_video.mp4"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
