--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        System Overview.
       </h2>
     </div>
   </div>
@@ -197,7 +197,7 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{li2024papl,
   title={PAPL-SLAM: Principal Axis-Anchored Monocular Point-Line SLAM},
-  author={Li, Guanghao and Cao, Yu and Chen, Qi and Yang, Yifan and Pu, Jian},
+  author={Li, Guanghao and Cao, Yu and Chen, Qi and Gao, Xin and Yang, Yifan and Pu, Jian},
   journal={arXiv preprint arXiv:2410.12324},
   year={2024}
 }</code></pre>
