--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        System Overview.
+        Demo Video.
       </h2>
     </div>
   </div>
@@ -175,7 +175,7 @@
         <!-- Your image here -->
         <img src="static/images/carousel1.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+          System Overview
         </h2>
       </div>
   </div>
